--- a/style.css
+++ b/style.css
@@ -41,37 +41,56 @@ body {
 
 
 
-/* MAIN CONTAINER ***************************************************************/
+/* MAIN CONTAINER ****************************************************/
 
 .mainContainer {
   display: flex;
 }
 
+
+
+/* MAIN CONTAINER LEFT ************************************************/
+
 .mainContainerLeft {
-  width: 30%;
+  width: 260px;
   border: 0.2px solid red;
-  height: 500px;
+  height: fit-content;
+  padding: 5px;
 }
 
 .filterHeader {
   display: flex;
   justify-content: space-between;
-  font-size: 13px;
-  width: 100%;
   height: 50px;
   border: 0.2px solid orange;
-  
+}
+
+.filterHeaderText, .filterHeaderButton {
+  font-size: 12px;
+  line-height: 50px;
 }
 
 .filterOptions {
-  width: 100%;
   border: 0.2px solid slateblue;
-  height: 450px;
+  height: fit-content;
 }
 
+.filterOption {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  line-height: 50px;
+  
+  border: 0.2px solid pink;
+}
+
+
+
+/* MAIN CONTAINER RIGHT ************************************************/
+
 .mainContainerRight {
-  width: 70%;
-  border: 0.2px solid green;
+  width: 500px;
+  border: 2px solid green;
 }
 
 
