--- a/style.css
+++ b/style.css
@@ -2,14 +2,25 @@ body {
   font-family: Arial;
 }
 
+.topTopContainer {
+  height: 200px;
+  width: 100%;
+  border: 0.2px solid black;
+}
+
 /* TOP CONTAINER ****************************************************************/
 
 .topContainer {
-
+  margin-top: 20px;
 }
 
 .directory {
+  font-size: 12px;
+  padding-left: 20px;
+}
 
+.topContainer h1 {
+  padding-left: 10px;
 }
 
 .headerSection {
@@ -30,8 +41,11 @@ body {
 
 .headerLinks {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 25px;
+  margin-left: 30%;
+  margin-right: 30%;
+  font-size: 12px;
   text-decoration: underline;
 }
 
@@ -53,7 +67,7 @@ body {
 
 .mainContainerLeft {
   width: 260px;
-  border: 0.2px solid red;
+  /* border: 0.2px solid red; */
   height: fit-content;
   padding: 5px;
 }
@@ -62,26 +76,41 @@ body {
   display: flex;
   justify-content: space-between;
   height: 50px;
-  border: 0.2px solid orange;
+  /* border: 0.2px solid orange; */
 }
 
 .filterHeaderText, .filterHeaderButton {
-  font-size: 12px;
+  font-size: 10px;
   line-height: 50px;
+  height: 30px;
+}
+
+.filterHeaderButton {
+  margin-top: 10px;
+  color: lightgray;
+  /* background-color: white; 
+  border: 0.2px gray; */
 }
 
 .filterOptions {
-  border: 0.2px solid slateblue;
+  /* border: 0.2px solid slateblue; */
   height: fit-content;
 }
 
 .filterOption {
   display: flex;
   justify-content: space-between;
-  height: 50px;
-  line-height: 50px;
-  
-  border: 0.2px solid pink;
+  height: 30px;
+  line-height: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 13px;
+  border-top: 1px solid lightgray;
+}
+
+.filterOption img {
+  height: 15px;
+  margin-top: 10px;
 }
 
 
