--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 /* MAIN CONTAINER LEFT ************************************************/
 
 .mainContainerLeft {
-  width: 260px;
+  width: 220px;
   /* border: 0.2px solid red; */
   height: fit-content;
   padding: 5px;
@@ -118,8 +118,61 @@ body {
 /* MAIN CONTAINER RIGHT ************************************************/
 
 .mainContainerRight {
-  width: 500px;
+  width: fit-content;
+  padding-left: 50px;
   border: 2px solid green;
+}
+
+.productSectionHeader {
+  display: flex;
+  justify-content: space-between;
+  height: 75px;
+  font-size: 13px;
+  line-height: 75px;
+  border: 0.2px solid turquoise;
+}
+
+.numberOfProducts {
+  /* border: solid orange; */
+}
+
+.sortBySection {
+  display: flex;
+  border: 0.2 px soolid purple
+}
+
+.sortBySectionCriterion {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+}
+
+.sortBySection img{
+  height: 15px;
+  margin-top: 30px;
+}
+
+.productRow {
+  display: flex;
+  margin-bottom: 25px;
+}
+
+.productBox {
+  height: 350px;
+  width: 200px;
+  margin-right: 25px;
+  border: 0.2px solid blueviolet;
+}
+
+.productBox img {
+  height: 250px;
+  width: 200px;
+}
+
+.productDetails {
+  height: 100px;
+  width: 200px;
+  border: 0.2px solid goldenrod;
 }
 
 
